Remove the create facility from the entity resolver
Fixes #28
