# generated/restapi/operations/find_or_create_organization_responses.go
@@ -1,55 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package operations
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"net/http"
-
-	"github.com/go-openapi/runtime"
-)
-
-// FindOrCreateOrganizationOKCode is the HTTP code returned for type FindOrCreateOrganizationOK
-const FindOrCreateOrganizationOKCode int = 200
-
-/*FindOrCreateOrganizationOK returns a URI for the organization in Rialto
-
-swagger:response findOrCreateOrganizationOK
-*/
-type FindOrCreateOrganizationOK struct {
-
-	/*contains the actual URI
-	  In: Body
-	*/
-	Payload string `json:"body,omitempty"`
-}
-
-// NewFindOrCreateOrganizationOK creates FindOrCreateOrganizationOK with default headers values
-func NewFindOrCreateOrganizationOK() *FindOrCreateOrganizationOK {
-
-	return &FindOrCreateOrganizationOK{}
-}
-
-// WithPayload adds the payload to the find or create organization o k response
-func (o *FindOrCreateOrganizationOK) WithPayload(payload string) *FindOrCreateOrganizationOK {
-	o.Payload = payload
-	return o
-}
-
-// SetPayload sets the payload to the find or create organization o k response
-func (o *FindOrCreateOrganizationOK) SetPayload(payload string) {
-	o.Payload = payload
-}
-
-// WriteResponse to the client
-func (o *FindOrCreateOrganizationOK) WriteResponse(rw http.ResponseWriter, producer runtime.Producer) {
-
-	rw.WriteHeader(200)
-	payload := o.Payload
-	if err := producer.Produce(rw, payload); err != nil {
-		panic(err) // let the recovery middleware deal with this
-	}
-
-}
